<resources>
    <string name="app_name">ChatAPP</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="welcome_to_lapit_chat_app">Welcome To Chat App</string>
    <string name="need_a_account">Need a new account ?</string>
    <string name="log_out">Log Out</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="need_a_new_account">Need a new Account</string>
    <string name="already_have_a_account">Already have account</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
